--- a/Resources/Prototypes/Entities/Clothing/Ears/headsets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Ears/headsets.yml
@@ -30,7 +30,7 @@
 
     - type: entity
   parent: ClothingHeadset
-  id: ClothingHeadsetSalvo
+  id: ClothingHeadsetsalvo
   name: Salvage headset
   description: A headset used by Salvage Specialists.
   components:
